# axum_ssr_image_board

./: .env  Cargo.toml  Dockerfile
src/: main.rs
src/endpoints/: mod.rs
src/endpoints/api/: boards.rs  mod.rs  status.rs
src/endpoints/html/: mod.rs
src/endpoints/html/components/: board_list.rs  mod.rs
src/endpoints/html/pages/: board_index.rs  landing.rs  mod.rs
src/endpoints/templates/: mod.rs
src/sql/: create.sql
src/static/js/: tailwind.js
src/templates/: base.tera  head.tera
src/templates/components/: board_list.tera  footer.tera  header.tera
src/templates/pages/: board_index.tera  landing.tera
