[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
cargo-watch = "8.5.3"
lazy_static = "1.5.0"
rand = "0.9.0"
serde = "1.0.217"
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["postgres"] }
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
